# InfoFetch

./: .gitignore  CMakeLists.txt  Database.cs  FileManager.cs  InfoFetch.application  InfoFetch.csproj  InfoFetch.sln  Notification.cs  Parser.cs  Program.cs  README.md  Website.cs  packages.config  websites.txt
Application Files/InfoFetch_1_0_0_0/: InfoFetch.application  InfoFetch.exe.deploy  InfoFetch.exe.manifest  icon.ico.deploy
Application Files/InfoFetch_1_0_0_1/: InfoFetch.exe.deploy  InfoFetch.exe.manifest
Application Files/InfoFetch_1_0_0_2/: InfoFetch.application  InfoFetch.exe.deploy  InfoFetch.exe.manifest
Application Files/InfoFetch_1_0_0_3/: InfoFetch.application  InfoFetch.exe.deploy  (+2 more)
InfoFetchConsole/: .gitignore  Database.cs  Driver.cs  InfoFetchConsole.csproj  InfoFetchConsole.sln  MyNotification.cs  Notification.cs  Parser.cs  Program.cs  UI.cs  Website.cs  packages.config  webdata.sqlite  websites.txt
InfoFetchUWP/: App.xaml  App.xaml.cs  InfoFetchUWP.csproj  InfoFetchUWP.sln  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
_InfoFetchService/: .gitignore  Database.cs  InfoFetchService.Designer.cs  InfoFetchService.cs  InfoFetchService.csproj  InfoFetchService.sln  Notification.cs  Program.cs  ProjectInstaller.Designer.cs  ProjectInstaller.cs  ProjectInstaller.resx  README.md
_InfoFetchTest/: .gitignore  App.config  Database.cs  Driver.cs  FileManager.cs  InfoFetch.csproj  Parser.cs  Program.cs  Website.cs  packages.config  websites.txt
_OUTDATED/: CMakeLists.txt
include/: network.hpp
src/: main.cpp  network.cpp
(+19 files in other folders)
